// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VIcon should add custom class 1`] = `
<i class="mdi-add mdi v-icon notranslate v-size--default custom"
   aria-hidden="true"
>
</i>
`;

exports[`VIcon should add custom style 1`] = `
<i class="mdi-add mdi v-icon notranslate v-size--default"
   style="color: red;"
   aria-hidden="true"
>
</i>
`;

exports[`VIcon should render an svg icon 1`] = `
<i class="v-icon notranslate v-size--default"
   aria-hidden="true"
>
  <svg class="v-icon__svg"
       xmlns="http://www.w3.org/2000/svg"
       viewbox="0 0 24 24"
       role="img"
       aria-hidden="true"
  >
    <path d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z">
    </path>
  </svg>
</i>
`;

exports[`VIcon should render globally defined icon 1`] = `
<i class="mdi-check mdi v-icon notranslate v-size--default"
   aria-hidden="true"
>
</i>
`;

exports[`VIcon should render ligature icon 1`] = `
<i class="material-icons v-icon notranslate v-size--default"
   aria-hidden="true"
>
  add
</i>
`;
